2005-07-31 10:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: [GormConnectionsInspector ok:]
	Removed code which blanks out the connector.  This allows the user
	to select connections repeatedly.  Suggested by Matt Rice.

2005-07-31 08:43 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPrivate.m: Reverted previous change in init.

2005-07-30 15:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormPreferences.gorm: Changed class hierarchy.  Also
	added panel outlet.
	* GormCore/GormClassInspector.m: -[GormClassInspector _currentClass]
	copy the className.
	* GormCore/GormPrivate.m: -[GormClassProxy init] copy the className.
	* Gorm.m: Changed to initialize preferences panel using init.
	* GormPrefs/GormPrefController.[hm]: Added panel method, changed
	derivation to a subclass of NSObject, instead of NSWindowController.

2005-07-30 09:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Makefile.postamble: Generate documentation from 
	headers only.
	* GormPrefs/GormColorsPref.h
	* GormPrefs/GormGeneralPref.h
	* GormPrefs/GormGeneralPref.m
	* GormPrefs/GormGuidelinePref.h
	* GormPrefs/GormHeadersPref.h
	* GormPrefs/GormPalettesPref.h
	* GormPrefs/GormPrefController.h
	* GormPrefs/GormShelfPref.h: Added documentation.

2005-07-30 04:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.h: Added documentation.

2005-07-30 04:16 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: use versionOfClass: in 
	_replaceObjectsWithTemplates: method.
	* GormCore/GormFilePrefsManager.[hm]: Added versionOfClass:.

2005-07-28 23:09 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSWindowSizeInspector.gorm: Corrected layout.

2005-07-28 00:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormImage.h: Added documentation.